# ferromagnetism-lab

./: .gitignore  README.md  instruments.py  proc.py  pyproject.toml  requirements.txt
curie/: proc.py  proc2.py
curie/data/first/: CurieData_06_05_23-03_05_2026.txt  HystLoop_0.626000C.txt  HystLoop_0.833000C.txt  HystLoop_1.031000C.txt  HystLoop_1.237000C.txt  HystLoop_1.567000C.txt  HystLoop_1.935000C.txt  HystLoop_3.590000C.txt  HystLoop_4.035000C.txt  HystLoop_4.249000C.txt  HystLoop_4.674000C.txt  HystLoop_4.857000C.txt  HystLoop_5.264000C.txt  HystLoop_5.444000C.txt  HystLoop_5.867000C.txt  HystLoop_m0.364000C.txt  HystLoop_m0.854000C.txt  HystLoop_m1.102000C.txt  HystLoop_m10.072000C.txt  HystLoop_m10.849000C.txt  HystLoop_m102.226000C.txt  HystLoop_m11.563000C.txt  HystLoop_m12.615000C.txt  HystLoop_m122.973000C.txt  HystLoop_m144.031000C.txt  HystLoop_m147.766000C.txt  HystLoop_m155.216000C.txt  HystLoop_m16.286000C.txt  HystLoop_m168.232000C.txt  HystLoop_m17.573000C.txt  HystLoop_m18.514000C.txt  HystLoop_m18.907000C.txt  HystLoop_m19.765000C.txt  HystLoop_m2.226000C.txt  HystLoop_m2.752000C.txt  HystLoop_m20.692000C.txt  HystLoop_m24.062000C.txt  HystLoop_m26.161000C.txt  HystLoop_m28.258000C.txt  HystLoop_m3.024000C.txt  (+43 more)
curie/data/second/: CurieData_07_05_15-03_05_2026.txt  HystLoop_0.681000C.txt  HystLoop_1.279000C.txt  (+233 more)
data/: data.md  data.xlsx
docs/: index.html
ferromagnetism/: proc.py
ferromagnetism/data/: data.md
ferromagnetism/moodle/: magnetfit2.m  scope_hysteresis_area.py
moodle/: magnetfit2.py  scope_hysteresis_area.m
(+611 files in other folders)
