[project]
name = "lab"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "marimo>=0.23.1",
    "matplotlib>=3.10.8",
    "nbconvert>=7.17.1",
    "numpy>=2.4.4",
    "openpyxl>=3.1.5",
    "pandas>=3.0.2",
    "scipy>=1.17.1",
    "taulab>=0.1.0",
    "uncertainties>=3.2.3",
]
